# mjcalc

./: CMakeLists.txt  COPYING.EXTRA  ProjectHome.md  ROADMAP  bar-descriptor.bb10.xml  bar-descriptor.pb.xml  bar-descriptor.xml  bb10.toolchain  bbpb.toolchain  mjcalc.cpp  mjcalc.kdev4
i18n/: CMakeLists.txt  mjcalc-ru_RU.ts
mjcalc/: CMakeLists.txt  game.cpp  game.h  hand.cpp  hand.h  mjcalc.cpp  mjcalcview.cpp  mjcalcview.h  persistantstore.cpp  persistantstore.h  result.cpp  result.h  resultcontroller.cpp  resultcontroller.h  resultstorage.cpp  resultstorage.h  round.cpp  round.h  roundresult.cpp  roundresult.h
qml/: Background.qml  Button.qml  CMakeLists.txt  LineEdit.qml  MessageBox.qml  MjcInput.qml  NameInput.qml  Pannel.qml  PannelButton.qml  ResultsRow.qml  ScoreInput.qml  Style.qml  TextButton.qml  addResults.qml  main.qml  new.qml
